Bug 477772 - Cannot uninstall or manage apps addons anymore
Summary: Cannot uninstall or manage apps addons anymore
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-11-30 13:43 UTC by Patrick Silva
Modified: 2024-01-19 12:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-11-30 13:43:47 UTC
STEPS TO REPRODUCE
1. open kickoff
2. right-click on Dolphin and choose "Uninstall or manage add-ons..."
3. 

OBSERVED RESULT
Discover opens the description page of Dolphin but there is no way to uninstall or manage add-ons

EXPECTED RESULT
Discover opens the description page of Dolphin and we are able to uninstall or manage add-ons

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-11-30 16:36:02 UTC
Can confirm the add-ons button is missing for me too, even when opened normally from Kickoff or KRunner or whatever.
Comment 2 Bug Janitor Service 2024-01-18 21:43:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/734
Comment 3 ratijas 2024-01-19 12:31:46 UTC
Git commit 87095d706d0f6a632942104f5210e2b8a250f859 by ivan tkachenko.
Committed on 19/01/2024 at 11:07.
Pushed by ratijas into branch 'master'.

Fix missing Addons button/view

Partially reverts 817a2053fa0ca75dcfd3ec6a4212b64cd46a6622 and patches
up the code in a way that works with newer changes. That change did not
make sense because it reversed the meaning of extends vs extended by.

The overlay sheet itself is buggy though, and needs separate fixing.

M  +7    -2    libdiscover/backends/PackageKitBackend/AppPackageKitResource.cpp
M  +1    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/87095d706d0f6a632942104f5210e2b8a250f859
Comment 4 ratijas 2024-01-19 12:33:46 UTC
Git commit a642376a7fd7b3e1c7d3ce5f017f94b74aad4f3a by ivan tkachenko.
Committed on 19/01/2024 at 13:33.
Pushed by ratijas into branch 'Plasma/6.0'.

Fix missing Addons button/view

Partially reverts 817a2053fa0ca75dcfd3ec6a4212b64cd46a6622 and patches
up the code in a way that works with newer changes. That change did not
make sense because it reversed the meaning of extends vs extended by.

The overlay sheet itself is buggy though, and needs separate fixing.
(cherry picked from commit 87095d706d0f6a632942104f5210e2b8a250f859)

M  +7    -2    libdiscover/backends/PackageKitBackend/AppPackageKitResource.cpp
M  +1    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/a642376a7fd7b3e1c7d3ce5f017f94b74aad4f3a