Fix missing Addons button/view

Partially reverts 817a2053fa0ca75dcfd3ec6a4212b64cd46a6622 and patches
up the code in a way that works with newer changes. That change did not
make sense because it reversed the meaning of extends vs extended by.

The overlay sheet itself is buggy though, and needs separate fixing.

BUG: 477772